<resources>
    <string name="app_name">Swapsies</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_trades">Swaps</string>
    <string name="sign_in_with_google">Google sign in</string>
    <string name="swapsies">Swapsies</string>

    <!--Add Item Strings-->
    <string name="item_name_et">Item Name</string>
    <string name="item_desc_et">Item Description</string>
    <string name="add_item_btn">Add Item</string>
    <string name="title_add_item">Add Item</string>
    <string name="required_fields">"Please fill out the required fields"</string>
    <string name="upload_success">Successfully uploaded item!</string>
    <string name="title_settings">Settings</string>
    <string name="my_items">My items</string>

    <string name="trades">Swaps</string>

    <string name="detail_fragment_title">Item Detail</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="trade_detail_fragment_title">View Trade</string>

    <string name="splash_screen_off">Don\'t show splash screen on app launch</string>
    <string name="splash_screen_on">Show splash screen on app launch</string>
    <string name="splash_screen_title">Splash screen</string>

    <string name="splash_screen_key">splashScreen</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="listed">Listed</string>

    <string name="posted_today">Posted today</string>
    <string name="posted_yesterday">Posted yesterday</string>
    <string name="posted_days_ago">Posted %1$d days ago</string>
    <string name="item_dateListed_detail">Listed</string>

    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_to_trade">Ask To Swap</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="item_name_title">Name:</string>
    <string name="item_desc_title">Description:</string>
    <string name="item_desc_listed">Listed</string>
    <string name="item_desc_listed_title">Listed:</string>
    <string name="select_an_item_to_trade">Select an item to swap</string>

    <string name="trade_successful">Successfully asked to trade %1$s for %2$s</string>
    <string name="missing_trade_item_ask_to_trade">Please choose an item to swap</string>
    <string name="error_message">Something has gone wrong</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="withdraw_offer">Withdraw Offer</string>
    <string name="contact">Contact</string>

    <string name="trade_accepted">Swap accepted</string>
    <string name="trade_declined">Swap declined</string>
    <string name="trade_withdrew">Swap withdrew</string>

    <string name="choose_email_client">Choose an email client</string>

    <string name="trade_meet">Lets meet up and swap!</string>
    <string name="trade_meet_detail">Lets meet up and swap %1$s for %2$s!</string>


    <string name="delete_btn">Delete</string>
    <string name="delete_success">Successfully deleted</string>

    <string name="google_sign_in_failed">Sign in failed! Check your connection and try again</string>
</resources>